# mirror-lab

./: .agents  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
a-hole/: .gitignore  Cargo.toml  README.md
a-hole/crab-cli/: Cargo.toml  readme.md
a-hole/crab-cli/src/: main.rs
a-hole/crab_tui/: Cargo.toml
a-hole/crab_tui/src/: main.rs
a-hole/docs/philosophy/archive/legacy/agent-core/: Cargo.toml
a-hole/docs/philosophy/archive/legacy/agents/redox_ml_agent/: Cargo.toml
a-hole/docs/philosophy/archive/legacy/clipstack/: Cargo.toml
a-hole/docs/philosophy/archive/legacy/clipstack/clipstack-core/: Cargo.toml
a-hole/docs/philosophy/archive/legacy/tools/format-to-psv/: Cargo.toml
a-hole/src/: main.rs
a-hole/src/capture/: mod.rs
a-hole/src/cli/: mod.rs
a-hole/src/config/: mod.rs
a-hole/src/db/: mod.rs  schema.sql  types.rs
a-hole/src/diff/: mod.rs
a-hole/src/domain/: mod.rs
a-hole/src/observer/: mod.rs
crabjar/: AGENTS.md  AGENTS.md.manifest.json  Cargo.lock.manifest.json  Cargo.toml.manifest.json  Containerfile  Containerfile.manifest.json  Dockerfile  Dockerfile.manifest.json  Justfile  Justfile.manifest.json  README.md  README.md.manifest.json  REPRO.md  agent_config.md  agent_config.md.manifest.json  build.rs  environment_manifest.json  human_reference.md  human_reference.md.manifest.json  index.md  manifest.json  project_map.md
crabjar/.agents/skills/attention-logger/: SKILL.md
crabjar/git/: manifest.json
crabjar/gitignore/: manifest.json
crabjar/memory/: index.md  manifest.json
crabjar/memory/files/: index.md  manifest.json
crabjar/memory/src/: error.rs  lib.rs  models.rs  schema.rs  store.rs
crabjar/memory/src/state_docs/: indexer.rs  mod.rs  models.rs  querier.rs  renderer.rs  schema.rs
crabjar/mirror-guard/: index.md
crabjar/mirror-guard/src/: lib.rs
crabjar/orchestrator/: index.md  manifest.json
crabjar/orchestrator/src/: concierge.rs  main.rs
crabjar/orchestrator/src/lm_studio_client/: mod.rs
crabjar/src/: dotfile_manager.rs  index.md  lib.rs  main.rs  manifest.json  project_loader.rs  state_docs.rs
crabjar/src/codeburn/: build.rs
crabjar/src/codeburn-classifier/src/: lib.rs
crabjar/src/codeburn-config/src/: lib.rs
crabjar/src/codeburn-pricing/src/: lib.rs
crabjar/src/codeburn-provider/src/: lib.rs
crabjar/src/codeburn/src/: lib.rs  main.rs  tui.rs
crabjar/src/codeburn/tests/: cli.rs
crabjar/src/crabjar-config/src/: lib.rs
crabjar/src/knowledge_store/: commands.rs  mod.rs
crabjar/src/skill-reference-store/src/: index.rs  lib.rs  staleness.rs
crabjar/src/state_docs/: commands.rs
crabjar/testing/configs/: btrfs.json  gpu_only.json  low_ram.json
crabjar/tests/: cli.rs  index.md  manifest.json
crabjar/ui-state-copy/: global.json  index.md  manifest.json  window-1.json
crabjar/workspace/: index.md  manifest.json
mirror-daemon/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  README.md  ROADMAP.md  build_and_test.sh
mirror-daemon/examples/pipelines/: health_check.nu
mirror-daemon/src/: daemon.rs  executor.rs  ledger.rs  main.rs  reflection.rs
mirror-daemon/src/examples/pipelines/: cashflow.nu  sales_analysis.nu
mirror-daemon/src/ingress/: clipboard_watcher.rs  config.rs  db.rs  doctor.rs  mod.rs  processor.rs  sanitizer.rs  transcription.rs  watcher.rs
mirror-guard/: Cargo.toml  index.md  manifest.json
mirror-guard/src/: annealing.rs  concierge.rs  gate.rs  guard_db.rs  lib.rs  memory.rs  retrieval.rs  schema.sql  trust.rs  types.rs
mirror-kernel/: .gitignore  Cargo.toml  LICENSE  README.md
mirror-kernel/mirror-voice/: Cargo.toml  piper-tts-kickstart.md
mirror-kernel/mirror-voice/piper-tts/: .gitignore  Cargo.toml
mirror-kernel/mirror-voice/piper-tts/examples/: basic.rs
mirror-kernel/mirror-voice/piper-tts/src/: audio.rs  error.rs  lib.rs  voice.rs
mirror-kernel/mirror-voice/src/: main.rs
mirror-kernel/sql/: events.sql
mirror-kernel/src/: decision_layer_example.rs  kernels.rs  lib.rs  main.rs
mirror-kernel/src/git_decision_layer/: mod.rs
mirror-log/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USER_GUIDE.md  build.rs  human.example.md
mirror-log/.github/workflows/: ci.yml  release.yml  rust.yml
mirror-log/scripts/: dep-audit.sh  log-dep-audit-matrix.sh  log-dep-audit.sh
mirror-log/src/: bridge.rs  catalogue.rs  chunk.rs  cli.rs  db.rs  decay.rs  distillation.rs  embedding.rs  export.rs  infer.rs  lib.rs  log.rs  orchestrator.rs  pipeline.rs  schema.sql  stage.rs
mirror-log/src/attention/: mod.rs
mirror-log/src/inference/: http_backend.rs  mod.rs  trait.rs
mirror-log/src/iteration/: mod.rs  queries.rs  types.rs
mirror-log/src/sources/: cli_history.rs  clipboard.rs  mod.rs
mirror-log/src/view/: mod.rs
mirror-log/tests/: edge_cases.rs  integration_test.rs  threshold_test.rs
mirror-log/tests/edge_cases/: database.rs  unicode.rs
mirror-log/tests/fixtures/: sample_events.txt
mirror-logger/: Cargo.toml
mirror-logger/src/: engine.rs  entry.rs  lib.rs  main.rs  tri.rs
mirror-logger/src/commands/: add.rs  list.rs  mod.rs  resolve.rs  revisit.rs
mirror-logger/src/store/: jsonl.rs  mod.rs  sqlite.rs  sqlite_error.rs
mirror-query/: .gitignore  Cargo.toml  QUICKSTART.md  README.md
mirror-query/src/: main.rs  main.rs.backup
mirror-wit/: Cargo.toml  README.md
mirror-wit/examples/: echo_module.rs
mirror-wit/macro/: Cargo.toml  main.rs
mirror-wit/macro/src/: lib.rs
mirror-wit/src/: lib.rs
mirror-wit/src/wit/: mirror.wit
mirror-zsession/: Cargo.toml
mirror-zsession/src/: main.rs
mirror_decisions/: test_event.json
staging/: 8510ad61-4a09-488a-868c-54d1221bf52a.json
zllg/: Cargo.toml  README.md  REPRO.md  build.rs
zllg/src/: cli.rs  config.rs  dashboard.rs  dashboard_tui.rs  detect.rs  error.rs  gate.rs  keybind.rs  layout.rs  lib.rs  logger.rs  main.rs  pane.rs  project_layout.rs  project_pane.rs  tools.rs  workspace.rs
zllg/tests/: dashboard_tests.rs  dashboard_tui_tests.rs  detect_tests.rs  keybind_tests.rs  project_layout_tests.rs  project_pane_tests.rs  workspace_tests.rs
(+4 files in other folders)
