[workspace]
members = [
    "mirror-wit",
    "mirror-wit/macro",
    "mirror-daemon",
    "mirror-kernel",
    "mirror-log",
    "mirror-logger",
    "mirror-query",
    "mirror-voice/piper-tts",
    "ingress",
    "clipboard-tts",
    "crab-cli",
    "crab_tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
debug = true

# Shared dependencies for the workspace
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# CLI and parsing
clap = { version = "4.5", features = ["derive"] }

# File system events
notify = "6.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
