[workspace]
members = [
    "mirror-wit",
    "mirror-wit/macro",
    "mirror-daemon",
    "mirror-kernel",
    "mirror-logger",
    "mirror-query",
    "mirror-log",

]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
debug = true

# Shared dependencies for the workspace
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
crossterm = "0.28"
rand = "0.8"

# CLI and parsing
clap = { version = "4.5", features = ["derive"] }

# File system events
notify = "6.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.14"
tokio = { version = "1.35", features = ["full"] }
