[workspace]
members = [
    "mirror-wit",
    "mirror-wit/macro",
    "mirror-daemon",
    "mirror-kernel",
    "mirror-logger",
    "mirror-query",
    "mirror-log",
    "crabjar/orchestrator",
    "mirror-guard",
    "crabjar/src/codeburn",
    "crabjar/src/codeburn-config",
    "crabjar/src/codeburn-provider",
    "crabjar/src/codeburn-classifier",
    "crabjar/src/codeburn-pricing",
    "zllg",
    "mirror-kernel/mirror-voice",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CrabJar Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabjar/mirror-lab"
documentation = "https://docs.crabjar.io"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
debug = true

# Shared dependencies for the workspace
[workspace.dependencies]
# Force rustls-webpki >= 0.103.13 to fix RUSTSEC-2026-0098, 0099, 0104
rustls-webpki = "0.103.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
crossterm = "0.28"
rand = "0.9"
ratatui = "0.30"

# CLI and parsing
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"

# File system events
notify = "6.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
regex = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tempfile = "3.14"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12" }

# Security / gitignore matching
ignore = "0.4"

# Path utilities
path-absolutize = "3.1"

# Workspace member dependencies
mirror-kernel = { path = "mirror-kernel" }
mirror-guard = { path = "mirror-guard" }
codeburn-config = { path = "crabjar/src/codeburn-config" }
codeburn-provider = { path = "crabjar/src/codeburn-provider" }
codeburn-classifier = { path = "crabjar/src/codeburn-classifier" }
codeburn-pricing = { path = "crabjar/src/codeburn-pricing" }
mirror-voice = { path = "mirror-kernel/mirror-voice" }
piper-tts = { path = "mirror-kernel/mirror-voice/piper-tts" }
