[workspace]

[package]
name = "a-hole"
version = "0.1.0"
edition = "2021"
description = "A Pi-hole for developer attention — mirrors telemetry and tracks config diffs as earned knowledge"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CromboJambo/a-hole"
keywords = ["attention", "telemetry", "config", "observer"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# File watching
notify = "6.1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime for watcher
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Crypto for content hashing
sha2 = "0.10"
hex = "0.4"

# Path utilities
dirs = "5.0"

[dev-dependencies]
tempfile = "3.14"
