[package]
name = "mirror-wit"
version = "0.1.0"
edition = "2021"

[lib]
name = "mirror_wit"
path = "src/lib.rs"

[[bin]]
name = "wit-bindgen"
path = "macro/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
wasm-tools = "1.100.0"

```
