[package]
name = "zllg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-or-later"
repository.workspace = true
documentation.workspace = true
description = "Zellij IDE orchestration layer — zellige without the name collision"

[[bin]]
name = "zllg"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = "6.0.0"
which = "8.0.2"
crossterm = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
