[workspace]
members = ["piper-tts"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/mirror_voice"

[workspace.dependencies]
tray-icon = "0.21.2"
wl-clipboard-rs = "0.9.2"

[workspace.dev-dependencies]
anyhow = "1.0"
