[workspace]
resolver = "2"

members = [
    "clipstack-core",
    "clipstack-db",
    "clipstack-net",
    "clipstack-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/clipstack"
description = "A minimal clipboard daemon for KDE Plasma and other clients"
keywords = ["clipboard", "kde", "plasma", "tailscale", "clipboard"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

# Network
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
http = "1.0"

# Utilities
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"
